More UnprocessableEntityError properties
